# fastapi-ca

./: .gitignore  README.md  alembic.ini  config.py  containers.py  context_vars.py  database.py  main.py  middlewares.py  pyproject.toml
common/: auth.py  logger.py  messaging.py
note/application/: note_service.py
note/domain/: note.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controllers/: note_controller.py
test/: celery_result.py  celery_task.py  context.py  deserialize_result.py  middleware.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py
